--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block meta_tags %}{% endblock %}
-    <title>{% block title %}Студенты КС{% endblock %}</title>
+    <title>{% block title %}{{ page_title|default:'Студенты КС' }}{% endblock %}</title>
     <link rel="icon" href="{% static 'icons/favicon.ico' %}" sizes="any">
     <link rel="icon" href="{% static 'icons/icon.svg' %}">
     <link rel="manifest" href="{% static 'manifest.json' %}">
@@ -69,12 +69,10 @@
         </div>
     </nav>
 {% endblock %}
-
 <div class="container mt-4">
     {% block container %}
     {% endblock %}
 </div>
-
 {% block js %}
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
