--- a/templates/interaction/interactions.html
+++ b/templates/interaction/interactions.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title='Взаимодействия'%}
 
 {% block container %}
-    {% load render_table from django_tables2 %}
-    <h1>Взаимодействия <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
-    {% render_table table %}
+    <div class="container mt-4">
+        {% load render_table from django_tables2 %}
+        <h1>Взаимодействия <a href="{% url 'interaction-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
+        {% render_table table %}
+    </div>
 {% endblock %}
