--- a/templates/interaction/update.html
+++ b/templates/interaction/update.html
@@ -1,22 +1,24 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title=interaction.interaction_name %}
 
 {% block custom_css %}
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 {% endblock %}
 
 {% block container %}
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Редактирование взаимодействия</h5>
+    <div class="container mt-4">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Редактирование взаимодействия</h5>
+            </div>
+            <div class="card-body">
+                <form method="post" enctype = "multipart/form-data">
+                    {% csrf_token %}
+                    {{form.as_p}}
+                    <button type="submit" class="btn btn-success">Изменить</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <form method="post" enctype = "multipart/form-data">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-success">Изменить</button>
-        </form>
-    </div>
-</div>
 {% endblock %}
 
 {% block custom_js %}
