--- a/templates/mentor/mentors.html
+++ b/templates/mentor/mentors.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title='Наставники' %}
 
 {% block container %}
-    {% load render_table from django_tables2 %}
-    <h1>Наставники</h1>
-    {% render_table table %}
+    <div class="container mt-4">
+        {% load render_table from django_tables2 %}
+        <h1>Наставники</h1>
+        {% render_table table %}
+    </div>
 {% endblock %}
