--- a/templates/mentor/update.html
+++ b/templates/mentor/update.html
@@ -1,17 +1,19 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title=mentor %}
 
 
 {% block container %}
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Редактирование наставника</h5>
+    <div class="container mt-4">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Редактирование наставника</h5>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    {{form.as_p}}
+                    <button type="submit" class="btn btn-success">Изменить</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <form method="post">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-success">Изменить</button>
-        </form>
-    </div>
-</div>
 {% endblock %}
