--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title='Смена пароля' %}
 
 {% block container %}
     <div class="container">
