--- a/templates/student/students.html
+++ b/templates/student/students.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title='Студенты' %}
 {% block container %}
-    {% load render_table from django_tables2 %}
-    <h1>Студенты <a href="{% url 'student-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
-    {% render_table table %}
+    <div class="container mt-4">
+        {% load render_table from django_tables2 %}
+        <h1>Студенты <a href="{% url 'student-create' %}" class="btn btn-primary btn-lg">Создать</a></h1>
+        {% render_table table %}
+    </div>
 {% endblock %}
