--- a/templates/tag/create.html
+++ b/templates/tag/create.html
@@ -1,16 +1,18 @@
-{% extends "base.html" %}
+{% include "base.html" with page_title='Новый тег' %}
 
 {% block container %}
-<div class="card">
-    <div class="card-header">
-        <h5 class="card-title">Добавить тег</h5>
+    <div class="card">
+        <div class="container mt-4">
+            <div class="card-header">
+                <h5 class="card-title">Добавить тег</h5>
+            </div>
+            <div class="card-body">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">Создать</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <form method="post">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-success">Создать</button>
-        </form>
-    </div>
-</div>
 {% endblock %}
